--- a/Netflix.html
+++ b/Netflix.html
@@ -30,16 +30,7 @@
 <tr><td bgcolor="#eeaa77"><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td>&nbsp;</td>
 <td width="100%"><dl><dt><a name="-create_cache"><strong>create_cache</strong></a>(filename)</dt><dd><tt>filename&nbsp;is&nbsp;the&nbsp;name&nbsp;of&nbsp;the&nbsp;cache&nbsp;file&nbsp;to&nbsp;load<br>
 returns&nbsp;a&nbsp;dictionary&nbsp;after&nbsp;loading&nbsp;the&nbsp;file&nbsp;or&nbsp;pulling&nbsp;the&nbsp;file&nbsp;from&nbsp;the&nbsp;public_html&nbsp;page</tt></dd></dl>
- <dl><dt><a name="-netflix_eval"><strong>netflix_eval</strong></a>(reader, writer)</dt><dd><tt>print&nbsp;("ACTUAL&nbsp;SCORES&nbsp;CACHE!!!!!!!!!!!!!!!!!!!!!!")<br>
-#print&nbsp;(actual_scores_cache)#&nbsp;(723633,&nbsp;10561):&nbsp;3....user,movie,rating<br>
-print&nbsp;("movie_year_cache!!!!!!!!!!!!!!!!!!!!!!!!!!!!!")<br>
-#print&nbsp;(movie_year_cache)#&nbsp;(1065162,&nbsp;15449):&nbsp;2005.....user,movie,when<br>
-print&nbsp;("average_movie_rating_per_year!!!!!!!!!!!!!!!!!!!!!!!!!!!!!")<br>
-#print&nbsp;(average_movie_rating_per_year)#looks&nbsp;like&nbsp;(2034850,&nbsp;2002):&nbsp;3.743<br>
-print&nbsp;("customer_average_rating_yearly!!!!!!!!!!!!!!!!!!!!!!!")<br>
-#print&nbsp;(customer_average_rating_yearly)#looks&nbsp;like&nbsp;(2236702,&nbsp;2001):&nbsp;4.174<br>
-print&nbsp;("decade_avg_cache!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!")<br>
-#print&nbsp;(decade_avg_cache)</tt></dd></dl>
+ <dl><dt><a name="-netflix_eval"><strong>netflix_eval</strong></a>(reader, writer)</dt></dl>
 </td></tr></table><p>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
 <tr bgcolor="#55aa55">
