Continued working on creating average movie rating cache

--- a/Netflix.html
+++ b/Netflix.html
@@ -42,6 +42,7 @@ returns&nbsp;a&nbsp;dictionary&nbsp;after&nbsp;loading&nbsp;the&nbsp;file&nbsp;o
 <strong>average_movie_rating_per_year</strong> = {(1, 2004): 3.588, (1, 2005): 3.842, (2, 2004): 3.471, (2, 2005): 3.57, (3, 2003): 3.605, (3, 2004): 3.685, (3, 2005): 3.63, (4, 2003): 1.286, (4, 2004): 2.975, (4, 2005): 2.582, ...}<br>
 <strong>customer_average_rating_yearly</strong> = {(6, 2004): 3.604, (6, 2005): 3.229, (7, 2002): 5.0, (7, 2003): 3.625, (7, 2004): 4.005, (7, 2005): 4.021, (8, 2005): 4.214, (10, 2002): 4.0, (10, 2003): 3.224, (10, 2004): 3.24, ...}<br>
 <strong>decade_avg_cache</strong> = {1990: 2.4}<br>
+<strong>movie_average_rating</strong> = {1: 3.749542961608775, 2: 3.5586206896551724, 3: 3.6411530815109345, 4: 2.73943661971831, 5: 3.9192982456140353, 6: 3.084396467124632, 7: 2.129032258064516, 8: 3.1898054996646548, 9: 2.6210526315789475, 10: 3.180722891566265, ...}<br>
 <strong>movie_year_cache</strong> = {(6, 501): 2005, (6, 658): 2005, (6, 825): 2005, (7, 285): 2005, (7, 6408): 2005, (7, 8393): 2005, (7, 9217): 2005, (7, 14759): 2005, (8, 1144): 2005, (8, 1202): 2005, ...}<br>
 <strong>sqrt</strong> = &lt;ufunc 'sqrt'&gt;<br>
 <strong>square</strong> = &lt;ufunc 'square'&gt;<br>
