Fixing acceptance tests

--- a/Netflix.html
+++ b/Netflix.html
@@ -49,6 +49,6 @@ returns&nbsp;a&nbsp;dictionary&nbsp;after&nbsp;loading&nbsp;the&nbsp;file&nbsp;o
 <strong>movie_year_cache</strong> = {(6, 501): 2005, (6, 658): 2005, (6, 825): 2005, (7, 285): 2005, (7, 6408): 2005, (7, 8393): 2005, (7, 9217): 2005, (7, 14759): 2005, (8, 1144): 2005, (8, 1202): 2005, ...}<br>
 <strong>sqrt</strong> = &lt;ufunc 'sqrt'&gt;<br>
 <strong>square</strong> = &lt;ufunc 'square'&gt;<br>
-<strong>start</strong> = 1487220104.3528566<br>
+<strong>start</strong> = 1487221701.413242<br>
 <strong>subtract</strong> = &lt;ufunc 'subtract'&gt;</td></tr></table>
 </body></html>
