Eliminated make test error

--- a/Netflix.html
+++ b/Netflix.html
@@ -8,7 +8,7 @@
 <td valign=bottom>&nbsp;<br>
 <font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>Netflix</strong></big></big></font></td
 ><td align=right valign=bottom
-><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/v/filer4b/v35q001/tsw674/Documents/cs329e-netflix/Netflix.py">/v/filer4b/v35q001/tsw674/Documents/cs329e-netflix/Netflix.py</a></font></td></tr></table>
+><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/v/filer4b/v35q001/ras4653/cs329e/cs329e-netflix/Netflix.py">/v/filer4b/v35q001/ras4653/cs329e/cs329e-netflix/Netflix.py</a></font></td></tr></table>
     <p><tt>#&nbsp;-------<br>
 #&nbsp;imports<br>
 #&nbsp;-------</tt></p>
@@ -40,15 +40,11 @@ returns&nbsp;a&nbsp;dictionary&nbsp;after&nbsp;loading&nbsp;the&nbsp;file&nbsp;o
     
 <tr><td bgcolor="#55aa55"><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td>&nbsp;</td>
 <td width="100%"><strong>actual_scores_cache</strong> = {(6, 501): 3, (6, 658): 3, (6, 825): 3, (7, 285): 5, (7, 6408): 5, (7, 8393): 3, (7, 9217): 5, (7, 14759): 3, (8, 1144): 4, (8, 1202): 5, ...}<br>
-<strong>average_movie_rating_per_year</strong> = {(1, 2004): 3.588, (1, 2005): 3.842, (2, 2004): 3.471, (2, 2005): 3.57, (3, 2003): 3.605, (3, 2004): 3.685, (3, 2005): 3.63, (4, 2003): 1.286, (4, 2004): 2.975, (4, 2005): 2.582, ...}<br>
-<strong>customer_average_rating_yearly</strong> = {(6, 2004): 3.604, (6, 2005): 3.229, (7, 2002): 5.0, (7, 2003): 3.625, (7, 2004): 4.005, (7, 2005): 4.021, (8, 2005): 4.214, (10, 2002): 4.0, (10, 2003): 3.224, (10, 2004): 3.24, ...}<br>
 <strong>customer_avg_rating</strong> = defaultdict(&lt;class 'int'&gt;, {1048577: '4.577', 10...40: '3.700', 1048565: '3.600', 2097148: '3.080'})<br>
-<strong>decade_avg_cache</strong> = {1990: 2.4}<br>
 <strong>movie_average_rating</strong> = {1: 3.749542961608775, 2: 3.5586206896551724, 3: 3.6411530815109345, 4: 2.73943661971831, 5: 3.9192982456140353, 6: 3.084396467124632, 7: 2.129032258064516, 8: 3.1898054996646548, 9: 2.6210526315789475, 10: 3.180722891566265, ...}<br>
 <strong>movie_sd</strong> = {6: -0.27206593962334064, 7: 0.40741825124408149, 8: 0.62919204391629002, 10: -0.19650156809631675, 25: -0.18542291165163635, 33: 0.14815099006844329, 42: 0.4469103566370487, 59: 0.22211814965737187, 79: 0.0059521345163521056, 83: 0.43972800518780975, ...}<br>
-<strong>movie_year_cache</strong> = {(6, 501): 2005, (6, 658): 2005, (6, 825): 2005, (7, 285): 2005, (7, 6408): 2005, (7, 8393): 2005, (7, 9217): 2005, (7, 14759): 2005, (8, 1144): 2005, (8, 1202): 2005, ...}<br>
 <strong>sqrt</strong> = &lt;ufunc 'sqrt'&gt;<br>
 <strong>square</strong> = &lt;ufunc 'square'&gt;<br>
-<strong>start</strong> = 1487221701.413242<br>
+<strong>start</strong> = 1487222739.7102523<br>
 <strong>subtract</strong> = &lt;ufunc 'subtract'&gt;</td></tr></table>
 </body></html>
